fix: add more test and resolve jacoco and pmd issue